fix: add style for always showing scrollbar in task select component (#641)

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -52,10 +52,6 @@ thead.ant-table-thead > tr > th {
   font-size: 12px;
 }
 
-.crosscheck-submitted-link:focus {
-  text-decoration: underline;
-}
-
 .rc-virtual-list-scrollbar {
   display: block !important;
 }
